--- a/Frontend/src/HomePages/HomePage/Notifications/view_profile/ViewProfile.module.css
+++ b/Frontend/src/HomePages/HomePage/Notifications/view_profile/ViewProfile.module.css
@@ -2,7 +2,8 @@
     width: 100%;
     display: flex;
     justify-content: center;
-
+    padding: 20px;
+    background-color: #f5f7fa;
 }
 
 .profileContainer {
@@ -11,179 +12,153 @@
     position: relative;
     flex-direction: column;
     align-items: center;
-    background-color: #eff2f8; 
+    /* background-color: #ffffff; */
     font-family: 'Arial', sans-serif;
     border-radius: 12px;
     width: 75%;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    max-width: 800px;
+    /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); */
 }
 
-.edit-icon {
-    position: absolute;
-    right: 25px;
-    cursor: pointer;
-    color: rgb(80, 80, 80);
-}
-
-.profileContainer img {
-    height: 100px;
-    width: 100px;
+.profileImg img {
+    height: 120px;
+    width: 120px;
     border-radius: 50%;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
     background-color: white;
     object-fit: cover;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+}
+
+.name {
+    margin-bottom: 10px;
+    font-weight: bold;
+    font-size: 24px;
+    color: #2c3e50;
 }
 
 .studentInfo {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 8px;
+    gap: 10px;
+    width: 100%;
 }
 
-.studentInfo .info {
+.info {
     color: rgba(0, 0, 0, 0.7);
     display: flex;
     align-items: center;
-    gap: 8px;
-    font-size: 14px;
+    gap: 10px;
+    /* background-color: red; */
+    font-size: 16px;
     justify-content: center;
-}
-
-.studentInfo .name {
-    margin-bottom: 8px;
-    font-weight: bold;
-    font-size: 20px;
-    color: #2c3e50;
 }
 
 .info p {
     position: relative;
-    padding: 0 12px;
-    color: #34495e;
+    border-radius: 30px;
+    padding: 2px 12px;
+
 }
 
-.info p:not(:last-child)::after {
-    content: "";
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 1px;
-    height: 20px;
-    background-color: #bdc3c7;
+.info .college{
+    background-color: #DBEAFE;
+    color: #1E40AF;
+}
+.info .GraduationYear{
+    background-color: #DCFCE7;
+    color: #166534;
+}
+.info .degree{
+    background-color: #F3E8FF;
+    color: #6B21A8;
 }
 
 .bio,
-.skills,
+.skills{
+    width: 100%;
+    text-align: left;
+    margin: 15px 0;
+    padding: 24px;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+    box-shadow: 0 3px 8px rgba(48, 48, 48, 0.1);
+}
 .githubUrl,
 .linkedinUrl {
     width: 100%;
-    text-align: left;
-    margin: 10px 0;
-    padding: 15px 20px;
-    border-radius: 10px;
-    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
+    padding: 24px ;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+    box-shadow: 0 3px 8px rgba(48, 48, 48, 0.1);
+}
+.bio p,
+.skills p,
+.githubUrl p,
+.linkedinUrl p {
+    font-weight: bold;
+    color: #111827;
+    margin-bottom: 10px;
+    font-size: 18px;
+}
+.bio {
+    color: #4B5563;
+    font-size: 16px;
+}
+.bioContent {
+    font-size: 16px;
+    color: #34495e;
+    line-height: 1.5;
 }
 
-.skills {
-    position: relative;
-}
-
-.skills .addBtn {
-    position: absolute;
-    right: 3%;
-    top: 30%;
-    width: 60px;
-    padding: 7px;
-    background-color: #3498db;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-}
-
-.skills .addBtn:hover {
-    background-color: #2980b9;
-    transform: translateY(-2px);
-}
-
-.skills .modaloverlay {
-    height: 80px;
-    width: 300px;
-    background-color: rgba(44, 62, 80, 0.9);
-    position: fixed;
-    top: -50%;
-    left: 35%;
-    border-radius: 10px;
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: top 0.5s ease-in-out;
-}
-
-.skills .modalshow {
-    top: 50%;
-}
-
-.skills .crossBtn {
-    position: absolute;
-    right: 15px;
-    top: 10px;
-    background: none;
-    border: none;
-    color: white;
-    font-size: 24px;
-    cursor: pointer;
-    transition: transform 0.3s ease;
-}
-
-.skills .crossBtn:hover {
-    transform: rotate(90deg);
-}
-
-.skills .skillsList {
+.skillsList {
     margin-top: 14px;
     display: flex;
     gap: 10px;
     flex-wrap: wrap;
 }
 
-.skills .skillItem {
-    background-color: #e1e1e1;
-    padding: 5px 8px;
+.skillItem {
+    padding: 8px 12px;
     border-radius: 5px;
-    font-size: 16px;
-    color: #2c3e50;
+    font-size: 14px;
+    font-weight: 500;
     white-space: nowrap;
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
-.skills .skillItem:hover {
-    background-color: #dcdcdc;
+.skillItem:hover {
     transform: scale(1.05);
+    opacity: 0.9;
 }
 
-.bio p,
-.skills p,
-.githubUrl p,
-.linkedinUrl p {
-    font-weight: bold;
-    margin-bottom: 8px;
-    color: #2c3e50;
+.linkContainer{
+    width: 100%;
+    text-align: left;
+    margin: 15px 0;
+
+    border-radius: 8px;
+
+    display: flex;
+    gap: 20px;
+
+}
+.githubUrl p,.linkedinUrl p{
+    display: flex;
+    gap: 5px;
+    align-items: center;
 }
 
 .githubUrl .light,
 .linkedinUrl .light {
-    font-weight: 300;
-    color: #2c3e50;
+    font-weight: 200;
+    color: #2C3E50;
     display: block;
     margin-top: 7px;
     text-decoration: none;
     transition: color 0.3s ease, transform 0.3s ease;
+    font-size: 16px;
 }
 
 .githubUrl .light:hover,
@@ -191,3 +166,93 @@
     color: #3498db;
     transform: translateX(3px);
 }
+
+.loaderContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    text-align: center;
+}
+
+.loader {
+    border: 5px solid #f3f3f3;
+    border-top: 5px solid #3A57E8;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 1s linear infinite;
+    margin-bottom: 10px;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.noSkills {
+    font-size: 14px;
+    color: #7f8c8d;
+}
+
+.edit-icon {
+    position: absolute;
+    right: 25px;
+    top: 25px;
+    cursor: pointer;
+    color: rgb(80, 80, 80);
+    font-size: 20px;
+    transition: color 0.3s ease;
+}
+
+.edit-icon:hover {
+    color: #3498db;
+}
+
+
+.modalOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent black background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* Ensure the modal is on top of everything */
+  }
+  
+  .modalContent {
+    background-color: #ffffff;
+    padding: 24px;
+    border-radius: 10px;
+    position: relative;
+    max-width: 90%;
+    max-height: 90%;
+    overflow: auto;
+    text-align: center;
+  }
+  
+  .modalImage {
+    max-width: 100%;
+    max-height: 80vh; /* Limit the height of the image */
+    border-radius: 10px;
+  }
+  
+  .closeButton {
+    position: absolute;
+    top: 7px;
+    right: 7px;
+    background: none;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+    color: #2c3e50;
+    transition: color 0.3s ease;
+  }
+  
+  .closeButton:hover {
+    color: #3498db; /* Blue color on hover */
+  }
